exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #0`] = `
<table data-role="flows-table" class="flows-table table table-striped">
  <thead>
    <tr>
      <th class="flows-table_status">Status</th>
      <th class="flows-table_method">Method</th>
      <th>Domain</th>
      <th>Path</th>
      <th>Date</th>
    </tr>
  </thead>
  <tbody>
    <tr class="" data-role="logs-row">
      <td class="flows-table_status-column">
        <span class="badge badge-success">200</span>
      </td>
      <td class="smallbold">POST</td>
      <td>
        <div class="text-nowrap">
          <div class="string-wrapper">
            <span class="path-wrapper-domain-undefined">app</span>
          </div>
        </div>
      </td>
      <td>
        <div class="text-nowrap fixed-table">
          <div class="string-wrapper">
            <span class="path-wrapper-path-undefined">/payment</span>
          </div>
        </div>
      </td>
      <td class="text-nowrap">
        <span title="a month ago">2020-03-13 17:01:16</span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #1`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="active capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mb-3 pt-0">
        <table class="general-table pb-3 table">
          <tbody>
            <tr>
              <td class="smallbold w-25">Type</td>
              <td><span></span></td>
            </tr>
            <tr>
              <td class="smallbold">URL</td>
              <td>http://app:8080/payment</td>
            </tr>
            <tr>
              <td class="smallbold">Request Method</td>
              <td>POST</td>
            </tr>
            <tr>
              <td class="smallbold">Status Code</td>
              <td><span class="badge badge-success">200</span></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #2`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="heading">
                <td class="header-name"></td>
              </tr>
              <tr class="d-none">
                <td class="header-name"></td>
                <td></td>
                <td></td>
              </tr>
              <tr class="">
                <td class="header-name">Host</td>
                <td class="header-original">app</td>
              </tr>
              <tr class="">
                <td class="header-name">Connection</td>
                <td class="header-original">keep-alive</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">192</td>
              </tr>
              <tr class="">
                <td class="header-name">Cache-Control</td>
                <td class="header-original">max-age=0</td>
              </tr>
              <tr class="">
                <td class="header-name">Origin</td>
                <td class="header-original">http://localhost:1230</td>
              </tr>
              <tr class="">
                <td class="header-name">Upgrade-Insecure-Requests</td>
                <td class="header-original">1</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">
                  application/x-www-form-urlencoded
                </td>
              </tr>
              <tr class="">
                <td class="header-name">User-Agent</td>
                <td class="header-original">
                  Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3)
                  AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132
                  Safari/537.36
                </td>
              </tr>
              <tr class="">
                <td class="header-name">Sec-Fetch-Dest</td>
                <td class="header-original">document</td>
              </tr>
              <tr class="">
                <td class="header-name">Accept</td>
                <td class="header-original">
                  text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
                </td>
              </tr>
              <tr class="">
                <td class="header-name">Sec-Fetch-Site</td>
                <td class="header-original">same-origin</td>
              </tr>
              <tr class="">
                <td class="header-name">Sec-Fetch-Mode</td>
                <td class="header-original">navigate</td>
              </tr>
              <tr class="">
                <td class="header-name">Sec-Fetch-User</td>
                <td class="header-original">?1</td>
              </tr>
              <tr class="">
                <td class="header-name">Referer</td>
                <td class="header-original">http://localhost:1230/</td>
              </tr>
              <tr class="">
                <td class="header-name">Accept-Encoding</td>
                <td class="header-original">gzip, deflate, br</td>
              </tr>
              <tr class="">
                <td class="header-name">Accept-Language</td>
                <td class="header-original">
                  ru-RU,ru;q=0.9,en-US;q=0.8,en;q=0.7,uk;q=0.6
                </td>
              </tr>
              <tr class="">
                <td class="header-name">Cookie</td>
                <td class="header-original">
                  _xsrf=2|d2d45c4b|57809fdf309e754b46a4235411bcaa4e|1584025682
                </td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #3`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="heading">
                <td class="header-name"></td>
              </tr>
              <tr class="d-none">
                <td class="header-name"></td>
                <td></td>
                <td></td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">text/html; charset=utf-8</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">2412</td>
              </tr>
              <tr class="">
                <td class="header-name">Server</td>
                <td class="header-original">Werkzeug/1.0.0 Python/3.7.2</td>
              </tr>
              <tr class="">
                <td class="header-name">Date</td>
                <td class="header-original">Fri, 13 Mar 2020 15:01:17 GMT</td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #4`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-1qn2w5c-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">1</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
name=Bob+Jones&amp;billing_address=1+Dr+Carlton+B+Goodlett+Pl%2C+San+Francisco%2C+CA+94102&amp;card-number=5105105105105100&amp;card-expiration-date=12%2F20&amp;card-security-code=123&amp;url=verygoodsecurity.com</pre
                    >
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #5`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-1qn2w5c-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">1</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
&lt;!DOCTYPE html&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">2</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
&lt;html lang="en"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">3</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">4</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">&lt;head&gt;</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">5</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;meta http-equiv="content-type" content="text/html; charset=UTF-8"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">6</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;meta charset="utf-8"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">7</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;title&gt;Demo&lt;/title&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">8</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;meta name="generator" content="Bootply" /&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">9</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">10</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"&gt;&lt;/script&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">11</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">12</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">13</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;!--[if lt IE 9]&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">14</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
      &lt;script src="//html5shim.googlecode.com/svn/trunk/html5.js"&gt;&lt;/script&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">15</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;![endif]--&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">16</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;link href="/static/css/styles.css" rel="stylesheet"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">17</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;link href="/static/css/payment.css" rel="stylesheet"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">18</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">&lt;/head&gt;</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">19</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
&lt;div class="row logo"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">20</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
      &lt;img class="rounded mx-auto d-block img-fluid img-logo" src="//logo.clearbit.com/verygoodsecurity.com" alt="VGS" /&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">21</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">&lt;/div&gt;</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">22</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
&lt;div class="row text-center company-text"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">23</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
  &lt;p&gt;Very Good Security&lt;/p&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">24</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">&lt;/div&gt;</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">25</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">26</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">27</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">28</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">29</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    &lt;div class="container-full"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">30</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
        &lt;div class="row"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">31</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
            &lt;div class="col-lg-12 text-center v-center"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">32</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;h1&gt;Redacted Items&lt;/h1&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">33</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;br /&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">34</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;br /&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">35</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;div class="col-lg-12"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">36</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                  &lt;ul class="list-group"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">37</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">38</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;name : Bob Jones &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">39</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">40</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;billing_address : 1 Dr Carlton B Goodlett Pl, San Francisco, CA 94102 &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">41</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">42</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;card-number : 5105105105105100 &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">43</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">44</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;card-expiration-date : 12/20 &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">45</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">46</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;card-security-code : 123 &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">47</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">48</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                      &lt;li&gt;url : verygoodsecurity.com &lt;/li&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">49</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">50</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                  &lt;/ul&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">51</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;/div&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">52</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                  &lt;form action="/merchant_admin" method="get"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">53</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                    &lt;input type="hidden" name="url" value="verygoodsecurity.com"&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">54</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                    &lt;button class = "btn btn-lg btn-primary" type="submit"&gt;Visit Merchant Portal&lt;/button&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">55</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                  &lt;/form&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">56</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
                &lt;/div&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">57</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
            &lt;/div&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">58</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
        &lt;/div&gt;</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">59</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">    &lt;/div&gt;</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">60</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text"></pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">61</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">&lt;/html&gt;</pre>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #6`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><span
              ><span id="popoverid_1"
                ><i class="fa-info-circle fas"></i
              ></span> </span></sup
          >or Reveal<sup
            ><span
              ><span id="popoverid_2"
                ><i class="fa-info-circle fas"></i
              ></span> </span
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="name"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    name: Bob+Jones
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="billing_address"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    billing_address:
                    1+Dr+Carlton+B+Goodlett+Pl,+San+Francisco,+CA+94102
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="card-number"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-number: 5105105105105100
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="card-expiration-date"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-expiration-date: 12/20
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="card-security-code"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-security-code: 123
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="url"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    url: verygoodsecurity.com
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-5 text-center">
              <button
                type="button"
                disabled=""
                data-role="select-secure-payload"
                class="button-next btn btn-primary disabled"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste mitmproxy flow > Visits Localhoste and gets 2 yamls from mitm request #7`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><span
              ><span id="popoverid_1"
                ><i class="fa-info-circle fas"></i
              ></span> </span></sup
          >or Reveal<sup
            ><span
              ><span id="popoverid_2"
                ><i class="fa-info-circle fas"></i
              ></span> </span
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input
                    name="isGoing"
                    type="checkbox"
                    readonly=""
                    checked=""
                  />
                  <div
                    title="name"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    name: Bob+Jones
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="billing_address"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    billing_address:
                    1+Dr+Carlton+B+Goodlett+Pl,+San+Francisco,+CA+94102
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input
                    name="isGoing"
                    type="checkbox"
                    readonly=""
                    checked=""
                  />
                  <div
                    title="card-number"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-number: 5105105105105100
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="card-expiration-date"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-expiration-date: 12/20
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="card-security-code"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    card-security-code: 123
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="url"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    url: verygoodsecurity.com
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-3">
              <div class="row">
                <div class="col-lg-6 col-sm-4">Transformer</div>
                <div class="col-lg-6">
                  <div class="payload-wrapper">
                    Operation &nbsp;<span
                      ><span id="popoverid_3"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                  <div class="payload-wrapper">
                    Storage &nbsp;<span
                      ><span id="popoverid_4"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                  <div class="payload-wrapper">
                    Format &nbsp;<span
                      ><span id="popoverid_5"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <div class="row mt-2">
                  <div class="col-lg-6 col-sm-4">
                    <div class="string-wrapper">
                      <span class="path-wrapper-undefined">name</span>
                    </div>
                  </div>
                  <div class="col-lg-6">
                    <div class="payload-wrapper">
                      <select
                        ><option value="REDACT">Redact</option
                        ><option value="ENRICH">Reveal</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="PERSISTENT">Persistent</option
                        ><option value="VOLATILE">Volatile</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="UUID"
                          >Generic - VGS Alias (Default) </option
                        ><option value="NUM_LENGTH_PRESERVING"
                          >Generic - Numeric Length Preserving </option
                        ><option value="FPE_SIX_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (6T4) </option
                        ><option value="FPE_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (T4) </option
                        ><option value="PFPT"
                          >Payment Card - Prefixed, Luhn Valid, 19 Digits Fixed
                          Length </option
                        ><option value="NON_LUHN_FPE_ALPHANUMERIC"
                          >Payment Card - Format Preserving - Non Luhn Valid </option
                        ><option value="FPE_SSN_T_FOUR"
                          >SSN - Format Preserving (A4) </option
                        ><option value="FPE_ACC_NUM_T_FOUR"
                          >Account Number - Numeric Length Preserving (A4) </option
                        ><option value="FPE_ALPHANUMERIC_ACC_NUM_T_FOUR"
                          >Account Number - Alphanumeric Length Preserving (A4) </option
                        ><option value="GENERIC_T_FOUR"
                          >Generic - VGS Alias Last Four (T4) </option
                        ><option value="RAW_UUID"
                          >Generic - UUID
                        </option></select
                      >
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div class="row mt-2">
                  <div class="col-lg-6 col-sm-4">
                    <div class="string-wrapper">
                      <span class="path-wrapper-undefined">card-number</span>
                    </div>
                  </div>
                  <div class="col-lg-6">
                    <div class="payload-wrapper">
                      <select
                        ><option value="REDACT">Redact</option
                        ><option value="ENRICH">Reveal</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="PERSISTENT">Persistent</option
                        ><option value="VOLATILE">Volatile</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="UUID"
                          >Generic - VGS Alias (Default) </option
                        ><option value="NUM_LENGTH_PRESERVING"
                          >Generic - Numeric Length Preserving </option
                        ><option value="FPE_SIX_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (6T4) </option
                        ><option value="FPE_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (T4) </option
                        ><option value="PFPT"
                          >Payment Card - Prefixed, Luhn Valid, 19 Digits Fixed
                          Length </option
                        ><option value="NON_LUHN_FPE_ALPHANUMERIC"
                          >Payment Card - Format Preserving - Non Luhn Valid </option
                        ><option value="FPE_SSN_T_FOUR"
                          >SSN - Format Preserving (A4) </option
                        ><option value="FPE_ACC_NUM_T_FOUR"
                          >Account Number - Numeric Length Preserving (A4) </option
                        ><option value="FPE_ALPHANUMERIC_ACC_NUM_T_FOUR"
                          >Account Number - Alphanumeric Length Preserving (A4) </option
                        ><option value="GENERIC_T_FOUR"
                          >Generic - VGS Alias Last Four (T4) </option
                        ><option value="RAW_UUID"
                          >Generic - UUID
                        </option></select
                      >
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div class="mt-5 text-center">
              <button
                type="button"
                data-role="select-secure-payload"
                class="button-next btn btn-primary"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
